agrego bgcolor y fotos

--- a/index.html
+++ b/index.html
@@ -52,16 +52,20 @@
 <!-- BARRA DE NAVEGACION-->
 
 <!-- HEADER-->
-<h2 class="nosotros">
-    Tu empresa de desarrollo web
-</h2>
-<div class="empresa">
-    <button class="btn-contacto">Contactanos</button>
-</div>
 
-<div class="imagenempresa">
-    <img src="" alt="" class="imagenempresa1">
-</div>
+    <h2 class="nosotros">
+        Tu empresa de desarrollo web
+    </h2>
+
+    <div class="empresa">
+        <button class="btn-contacto">Contactanos</button>
+    </div>
+
+    <div class="imagenempresa">
+        <img src="./img/Captura de pantalla 2023-08-07 000532.jpg" alt="" class="imagenempresa1">
+        <img src="./img/Captura de pantalla 2023-08-07 000615.jpg" alt="" class="imagenempresa2">
+    </div> 
+
 
 
 <!-- HEADER-->
