Agrego que hacemos y btn

--- a/index.html
+++ b/index.html
@@ -53,21 +53,44 @@
         </div>
         <!-- BARRA DE NAVEGACION-->
 
-        <!-- INTRODUCCION -->
+        <!-- HABLA CON NOSOTROS + FOTO -->
 
-        <div class="responsive-two-column-grid">
+        <div class="responsive-two-column-grid" id="imagen-frase">
             <div>
                 <div class="frase">
-                    <h2>Magoyamagoyasjlkfnjakslnfkjl</h2>
+                    <h2>Tu empresa de desarrollo web</h2>
                     <button>CONTACTÁNOS</button>
                 </div>
             </div>
             <div>
-                <img class="img" src="img/1.avif" alt="Chania" width="460" height="345"> 
+                <img class="img" src="img/1.avif" id="imagen-nav" alt="Chania" width="460" height="345"> 
             </div>
         </div>
 
-        <!-- INTRODUCCION -->
+        <!-- HABLA CON NOSOTROS + FOTO -->
+
+        <!-- QUE HACEMOS -->
+        <div id="quehacemos">
+            <h1 class="titulo150">We combine design, strategy, and technology to build custom software that <span>amplifies your company impact.</span></h1>
+            <div id="quehacemos1">
+                <h2> Design
+                    <p>Deliver elegant, intuitive user experiences via research-based, user-centric design.<p>
+                </h2>
+
+                <h2> Development
+                    <p>Build reliable, scalable software using cutting-edge technology and world-class technical talent.</p>
+                </h2>
+
+                <h2> Product Strategy
+                    <p>Identify and bolster unique product differentiators to translate vision to value.</p>
+                </h2>
+            </div>
+                <div id="btn-id">
+                    <button id="btn-qhm">Explore our services <img id="right-arrow" width="20" height="20" src="https://img.icons8.com/tiny-color/16/right.png" alt="right"/></button>
+                </div>
+        </div>
+        <!-- QUE HACEMOS -->
+
 
         <!-- FOOTER-->
         <div>
