Bases de cards peladas

--- a/index.html
+++ b/index.html
@@ -91,11 +91,38 @@
         </div>
         <!-- QUE HACEMOS -->
 
+        <!-- NOSOTROS -->
+        <div id="CEO">
+            <h1 class="titulo150">We value the quality of our relationships as much as the quality of our code.
+            </h1>
+            
+            <div class="ceos">
+                <div class="row">
+                    <div class="col">
+                        <div class="tarjeta">
+                            <p>
+                                “Rootstrap's services are high-quality and their engineers have become a major part of the coding and development team. Professional and dedicated. They work directly with the client's team and communicate constantly.
+                            </p>
+                        </div>
+                        <img src="" alt="">
+                        <p>nashe</p>
+                    </div>
+                    <div class="col">
+                        <div class="tarjeta">
+                            <p>
+                                “Rootstrap's services are high-quality and their engineers have become a major part of the coding and development team. Professional and dedicated. They work directly with the client's team and communicate constantly.
+                            </p>
+                        </div>
+                        <img src="" alt=""> 
+                        <p>nashe</p>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        <!-- NOSOTROS -->
+
 
         <!-- FOOTER-->
-        <div>
-
-        </div>
         <!-- FOOTER-->
 
     </div>
