primera version de nosotros

--- a/index.html
+++ b/index.html
@@ -96,28 +96,34 @@
             <h1 class="titulo150">We value the quality of our relationships as much as the quality of our code.
             </h1>
             
-            <div class="ceos">
-                <div class="row">
-                    <div class="col">
-                        <div class="tarjeta">
-                            <p>
-                                “Rootstrap's services are high-quality and their engineers have become a major part of the coding and development team. Professional and dedicated. They work directly with the client's team and communicate constantly.
-                            </p>
-                        </div>
+            <div class="row">
+                <div class="col">
+                    <div class="texto">
+                        <p class="pp">
+                            “Rootstrap's services are high-quality and their engineers have become a major part of the coding and development team. Professional and dedicated. They work directly with the client's team and communicate constantly.”
+                        </p>
                         <img src="" alt="">
-                        <p>nashe</p>
+                        <p class="pp">
+                            Mandar Bapaye
+                            VP of Engineering at MasterClass
+                        </p>
                     </div>
-                    <div class="col">
-                        <div class="tarjeta">
-                            <p>
-                                “Rootstrap's services are high-quality and their engineers have become a major part of the coding and development team. Professional and dedicated. They work directly with the client's team and communicate constantly.
-                            </p>
-                        </div>
-                        <img src="" alt=""> 
-                        <p>nashe</p>
+                </div>
+                
+                <div class="col">
+                    <div class="texto">
+                        <p class="pp">
+                            “Their team is uniquely willing to go above and beyond to mentor a first-time founder. The team's support is unwavering, and they are all committed to finding new ways to make the project as successful as possible.”
+                        </p>
+                        <img src="" alt="">
+                        <p class="pp">
+                            Lindsey Brassington
+        CEO and Founder at Generis
+                        </p>
                     </div>
-                  </div>
-            </div>
+                </div>
+              </div>
+
         </div>
         <!-- NOSOTROS -->
 
