--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 </head>
 
 <body>
+        <!-- PRE-LOADER -->
+    <div id="preloader"></div>        
+        <!-- PRE-LOADER -->
+
     <!-- BARRA DE NAVEGACION-->
     <div id="cont">
         <div id="barranav">
@@ -99,11 +103,11 @@
             <div class="row">
                 <div class="col">
                     <div class="texto">
-                        <p class="pp">
+                        <h2 id="pp">
                             “Rootstrap's services are high-quality and their engineers have become a major part of the coding and development team. Professional and dedicated. They work directly with the client's team and communicate constantly.”
-                        </p>
+                        </h2>
                         <img src="" alt="">
-                        <p class="pp">
+                        <p class="pp"> <img src="./img/Foto cv.png" id="imagenCEO" alt="">
                             Mandar Bapaye
                             VP of Engineering at MasterClass
                         </p>
@@ -112,23 +116,51 @@
                 
                 <div class="col">
                     <div class="texto">
-                        <p class="pp">
+                        <h2 id="pp"> 
                             “Their team is uniquely willing to go above and beyond to mentor a first-time founder. The team's support is unwavering, and they are all committed to finding new ways to make the project as successful as possible.”
-                        </p>
+                        </h2>
                         <img src="" alt="">
-                        <p class="pp">
+                        <p class="pp"><img src="./img/Foto cv.png" id="imagenCEO" alt="">
                             Lindsey Brassington
-        CEO and Founder at Generis
+                            CEO and Founder at Generis
                         </p>
                     </div>
                 </div>
-              </div>
+            </div>
 
         </div>
         <!-- NOSOTROS -->
 
 
         <!-- FOOTER-->
+        <footer class="pie-pagina">
+            <div class="grupo-1">
+                <div class="box">
+                    <figure>
+                        <a href="#">
+                            <img src="img/logotipo-sleedw.svg" alt="Logo de DEZERT">
+                        </a>
+                    </figure>
+                </div>
+                <div class="box">
+                    <h2>SOBRE NOSOTROS</h2>
+                    <p>MATEO</p>
+                    <p>tiago</p>
+                </div>
+                <div class="box">
+                    <h2>SIGUENOS</h2>
+                    <div class="red-social">
+                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="#" class="fa fa-instagram"></a>
+                        <a href="#" class="fa fa-twitter"></a>
+                        <a href="#" class="fa fa-youtube"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="grupo-2">
+                <small>&copy; 2023 <b>Dezert</b> - Todos los Derechos Reservados.</small>
+            </div>
+        </footer>
         <!-- FOOTER-->
 
     </div>
@@ -138,7 +170,7 @@
 
 
 
-
+    <script src="https://cdn.cloudflare.com/ajax/libs/jquery/3.4.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -148,6 +180,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
+        <script src="script.js"></script>
+        <script src="https://kit.fontawesome.com/a2c453f2cf.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
