--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="./img/favicon-icon.png">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">   
+    <script src="https://kit.fontawesome.com/a2c453f2cf.js" crossorigin="anonymous"></script> 
     <title>Dezert</title>
 
 </head>
@@ -93,8 +95,7 @@
                 </h2>
             </div>
             <div id="btn-id">
-                <button id="btn-qhm">Explore our services <img id="right-arrow" width="20" height="20"
-                        src="https://img.icons8.com/tiny-color/16/right.png" alt="right" /></button>
+                <button id="btn-qhm">Explore our services</button>
             </div>
         </div>
         <!-- QUE HACEMOS -->
@@ -139,6 +140,46 @@
         </div>
         <!-- NOSOTROS -->
 
+        <!-- SERVICIOS -->
+
+    <div class="servicios">
+        <h2>Our services</h2>
+        <div class="row">
+            <div class="servicios1">
+                <i class="fa-solid fa-laptop-code" style="color: #ff8800;"></i>
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+            </div>
+
+            <div class="servicios1">
+                <i class="fa-solid fa-chart-line" style="color: #ff8800;"></i>                
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+            </div>
+
+            <div class="servicios1">
+                <i class="fa-solid fa-chart-pie" style="color: #ff8800;"></i>                
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+            </div>
+
+            <div class="servicios1">
+                <i class="fa-solid fa-network-wired" style="color: #ff8800;"></i>                
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+            </div>
+
+            <div class="servicios1">
+                <i class="fa-solid fa-code" style="color: #ff8800;"></i>                
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+            </div>
+        </div>
+    </div>
+
+        <!-- SERVICIOS -->
+
+
         <!-- NUESTRO TRABAJO -->
         <section class="trabajos" id="nuestrotrabajo">
             <h2 class="nuestrost">Nuestro trabajo</h2>
@@ -168,8 +209,7 @@
                 </article>
             </div>
             <div id="btn-id">
-                <button id="btn-qhm">Explore our WORK <img id="right-arrow" width="20" height="20"
-                        src="https://img.icons8.com/tiny-color/16/right.png" alt="right" /></button>
+                <button id="btn-qhm">Explore our WORK</button>
             </div>
 
 
@@ -181,46 +221,49 @@
 
 
         <!-- COMO PODERMOS AYUDARTE -->
-        <div class="container">
-            <h1>Como podemos ayudarte</h1>
-            <img src="img/oficina.jpg" alt="">
-        </div>
+
         <!-- COMO PODEMOS AYUDARTE -->
 
         
 
         <!-- FOOTER-->
-        <footer class="pie-pagina">
-            <div class="grupo-1">
-                <div class="box">
-                    <figure>
-                        <a href="#">
-                            <img src="img/logotipo-sleedw.svg" alt="Logo de DEZERT">
-                        </a>
-                    </figure>
-                </div>
-                <div class="box">
-                    <h2>SOBRE NOSOTROS</h2>
-                    <p>MATEO</p>
-                    <p>tiago</p>
-                </div>
-                <div class="box">
-                    <h2>SIGUENOS</h2>
-                    <div class="red-social">
-                        <a href="#" class="fa fa-facebook"></a>
-                        <a href="#" class="fa fa-instagram"></a>
-                        <a href="#" class="fa fa-twitter"></a>
-                        <a href="#" class="fa fa-youtube"></a>
-                    </div>
-                </div>
+<section class="contact">
+    <div class="footer">
+        <div class="main">
+            <div class="col1">
+                <h4>Menu Links</h4>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sasdfadsf</a></li>
+                    <li><a href="#">afdfad</a></li>
+                    <li><a href="#">adfsfd</a></li>
+                </ul>
             </div>
-            <div class="grupo-2">
-                <small>&copy; 2023 <b>Dezert</b> - Todos los Derechos Reservados.</small>
-            </div>
-        </footer>
-        <!-- FOOTER-->
 
+            <div class="col1">
+                <h4>Menu Links</h4>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sasdfadsf</a></li>
+                    <li><a href="#">afdfad</a></li>
+                    <li><a href="#">adfsfd</a></li>
+                </ul>
+            </div>
+
+            <div class="col1">
+                <h4>information</h4>
+                <div class="social">
+                    <a href="#"><i class='bx bxl-twitter'></i></a>
+                    <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                    <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+                    <a href="#"><i class='bx bxl-github' ></i></a>
+                </div>
+            </div>
+
+        </div>
     </div>
+</section>
+        <!-- FOOTER-->
 
 
 
