--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="./img/favicon-icon.png">
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">   
-    <script src="https://kit.fontawesome.com/a2c453f2cf.js" crossorigin="anonymous"></script> 
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <script src="https://kit.fontawesome.com/a2c453f2cf.js" crossorigin="anonymous"></script>
     <title>Dezert</title>
 
 </head>
@@ -31,7 +31,7 @@
         <div id="barranav">
             <nav class="navbar navbar-expand-md navbar-dark" id="barranav">
                 <!-- Brand -->
-                <a class="navbar-brand" id="dezertnav" href="#">DEZERT</a>
+                <a class="navbar-brand" id="dezertnav" href="#"><img src="img/Logo-empresa1-blanco.png" alt=""></a>
 
                 <!-- Toggler/collapsibe Button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div>
-                <img class="img" src="img/1.avif" id="imagen-nav" alt="Chania" width="460" height="345">
+                <img class="img" src="img/oficina.jpg" id="imagen-nav" alt="Chania" width="460" height="345">
             </div>
         </div>
 
@@ -78,7 +78,8 @@
         <!-- QUE HACEMOS -->
         <div id="quehacemos">
             <h1 class="titulo150">We combine design, strategy, and technology to build custom software that
-                <span>amplifies your company impact.</span></h1>
+                <span>amplifies your company impact.</span>
+            </h1>
             <div id="quehacemos1">
                 <h2> Design
                     <p>Deliver elegant, intuitive user experiences via research-based, user-centric design.
@@ -142,40 +143,40 @@
 
         <!-- SERVICIOS -->
 
-    <div class="servicios">
-        <h2>Our services</h2>
-        <div class="row">
-            <div class="servicios1">
-                <i class="fa-solid fa-laptop-code" style="color: #ff8800;"></i>
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
-            </div>
+        <div class="servicios">
+            <h2>Our services</h2>
+            <div class="row">
+                <div class="servicios1">
+                    <i class="fa-solid fa-laptop-code" style="color: #ff8800;"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                </div>
 
-            <div class="servicios1">
-                <i class="fa-solid fa-chart-line" style="color: #ff8800;"></i>                
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
-            </div>
+                <div class="servicios1">
+                    <i class="fa-solid fa-chart-line" style="color: #ff8800;"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                </div>
 
-            <div class="servicios1">
-                <i class="fa-solid fa-chart-pie" style="color: #ff8800;"></i>                
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
-            </div>
+                <div class="servicios1">
+                    <i class="fa-solid fa-chart-pie" style="color: #ff8800;"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                </div>
 
-            <div class="servicios1">
-                <i class="fa-solid fa-network-wired" style="color: #ff8800;"></i>                
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
-            </div>
+                <div class="servicios1">
+                    <i class="fa-solid fa-network-wired" style="color: #ff8800;"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                </div>
 
-            <div class="servicios1">
-                <i class="fa-solid fa-code" style="color: #ff8800;"></i>                
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                <div class="servicios1">
+                    <i class="fa-solid fa-code" style="color: #ff8800;"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                </div>
             </div>
         </div>
-    </div>
 
         <!-- SERVICIOS -->
 
@@ -185,7 +186,7 @@
             <h2 class="nuestrost">Nuestro trabajo</h2>
             <div class="contenedor">
                 <article class="trabajo__columna">
-                    <img src="img/Foto cv.png" class="probandohover" alt="daviccoSRL">
+                    <img src="img/notas.jpg" class="probandohover" alt="daviccoSRL">
                     <div class="trabajos_texto">
                         <h3>ashe</h3>
                         <p>ashe</p>
@@ -193,7 +194,7 @@
                 </article>
 
                 <article class="trabajo__columna">
-                    <img src="img/Foto cv.png" class="probandohover" alt="daviccoSRL">
+                    <img src="img/notas.jpg" class="probandohover" alt="daviccoSRL">
                     <div class="trabajos_texto">
                         <h3>ashe</h3>
                         <p>ashe</p>
@@ -201,7 +202,7 @@
                 </article>
 
                 <article class="trabajo__columna">
-                    <img src="img/Foto cv.png" class="probandohover" alt="daviccoSRL">
+                    <img src="img/notas.jpg" class="probandohover" alt="daviccoSRL">
                     <div class="trabajos_texto">
                         <h3>ashe</h3>
                         <p>ashe</p>
@@ -209,60 +210,56 @@
                 </article>
             </div>
             <div id="btn-id">
-                <button id="btn-qhm">Explore our WORK</button>
+                <button id="btn-qhm">Explore our work</button>
             </div>
 
 
         </section>
 
-
-
         <!-- NUESTRO TRABAJO -->
-
 
         <!-- COMO PODERMOS AYUDARTE -->
 
         <!-- COMO PODEMOS AYUDARTE -->
 
-        
 
         <!-- FOOTER-->
-<section class="contact">
-    <div class="footer">
-        <div class="main">
-            <div class="col1">
-                <h4>Menu Links</h4>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sasdfadsf</a></li>
-                    <li><a href="#">afdfad</a></li>
-                    <li><a href="#">adfsfd</a></li>
-                </ul>
-            </div>
+        <section class="contact">
+            <div class="footer">
+                <div class="main">
+                    <div class="col1">
+                        <h4>Menu Links</h4>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Sasdfadsf</a></li>
+                            <li><a href="#">afdfad</a></li>
+                            <li><a href="#">adfsfd</a></li>
+                        </ul>
+                    </div>
 
-            <div class="col1">
-                <h4>Menu Links</h4>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sasdfadsf</a></li>
-                    <li><a href="#">afdfad</a></li>
-                    <li><a href="#">adfsfd</a></li>
-                </ul>
-            </div>
+                    <div class="col1">
+                        <h4>Menu Links</h4>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Sasdfadsf</a></li>
+                            <li><a href="#">afdfad</a></li>
+                            <li><a href="#">adfsfd</a></li>
+                        </ul>
+                    </div>
 
-            <div class="col1">
-                <h4>information</h4>
-                <div class="social">
-                    <a href="#"><i class='bx bxl-twitter'></i></a>
-                    <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-                    <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                    <a href="#"><i class='bx bxl-github' ></i></a>
+                    <div class="col1">
+                        <h4>information</h4>
+                        <div class="social">
+                            <a href="#"><i class='bx bxl-twitter'></i></a>
+                            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                            <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+                            <a href="#"><i class='bx bxl-github'></i></a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
-
-        </div>
-    </div>
-</section>
+        </section>
         <!-- FOOTER-->
 
 
@@ -270,18 +267,18 @@
 
 
 
-    <script src="https://cdn.cloudflare.com/ajax/libs/jquery/3.4.1/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-        crossorigin="anonymous"></script>
-    <script src="script.js"></script>
-    <script src="https://kit.fontawesome.com/a2c453f2cf.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.cloudflare.com/ajax/libs/jquery/3.4.1/dist/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+            integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+            crossorigin="anonymous"></script>
+        <script src="script.js"></script>
+        <script src="https://kit.fontawesome.com/a2c453f2cf.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
