--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -31,7 +32,7 @@
         <div id="barranav">
             <nav class="navbar navbar-expand-md navbar-dark" id="barranav">
                 <!-- Brand -->
-                <a class="navbar-brand" id="dezertnav" href="#"><img src="img/Logo-empresa1-blanco.png" alt=""></a>
+                <a class="navbar-brand" id="dezertnav" href="#"><img src="img/Logo-empresa-3chico.png" alt=""></a>
 
                 <!-- Toggler/collapsibe Button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -68,8 +69,8 @@
                     <button>CONTACTÁNOS</button>
                 </div>
             </div>
-            <div>
-                <img class="img" src="img/oficina.jpg" id="imagen-nav" alt="Chania" width="460" height="345">
+            <div class="logo-oficina">
+                <img class="img" src="img/oficina.jpg" id="imagen-nav" alt="Chania" >
             </div>
         </div>
 
@@ -182,6 +183,7 @@
 
 
         <!-- NUESTRO TRABAJO -->
+
         <section class="trabajos" id="nuestrotrabajo">
             <h2 class="nuestrost">Nuestro trabajo</h2>
             <div class="contenedor">
@@ -212,8 +214,6 @@
             <div id="btn-id">
                 <button id="btn-qhm">Explore our work</button>
             </div>
-
-
         </section>
 
         <!-- NUESTRO TRABAJO -->
@@ -224,42 +224,37 @@
 
 
         <!-- FOOTER-->
-        <section class="contact">
-            <div class="footer">
-                <div class="main">
-                    <div class="col1">
-                        <h4>Menu Links</h4>
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Sasdfadsf</a></li>
-                            <li><a href="#">afdfad</a></li>
-                            <li><a href="#">adfsfd</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col1">
-                        <h4>Menu Links</h4>
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Sasdfadsf</a></li>
-                            <li><a href="#">afdfad</a></li>
-                            <li><a href="#">adfsfd</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col1">
-                        <h4>information</h4>
-                        <div class="social">
-                            <a href="#"><i class='bx bxl-twitter'></i></a>
-                            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-                            <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                            <a href="#"><i class='bx bxl-github'></i></a>
-                        </div>
-                    </div>
-
-                </div>
+        <footer>
+            <div class="columna">
+                <h2>Países</h2>
+                <ul>
+                    <li>ARGENTINA</li>
+                    <li>BRASIL</li>
+                    <li>MONGOLIA</li>
+                </ul>
             </div>
-        </section>
+            <div class="columna">
+                <h2>Contacto</h2>
+                <p><a href="mailto:dezert@gmail.com.com">contacto@tudominio.com</a></p>
+            </div>
+            <div class="columna">
+                <h2>Sitemap</h2>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Acerca de nosotros</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </div>
+        </footer>
+        <div class="redes-sociales">
+            <p>Siguenos:</p>
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-laptop-code" style="color: #ff8800;"></i></li>
+                <li><a href="#"><i class="fa-solid fa-laptop-code" style="color: #ff8800;"></i></li>
+                <li><a href="#"><i class="fa-solid fa-laptop-code" style="color: #ff8800;"></i></li>
+            </ul>
+        </div>
         <!-- FOOTER-->
 
 
