--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" href="./img/favicon-icon.png">
+    <link rel="icon" href="./img/Logo-empresa.12.png">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <script src="https://kit.fontawesome.com/a2c453f2cf.js" crossorigin="anonymous"></script>
     <title>Dezert</title>
@@ -103,43 +103,52 @@
         <!-- QUE HACEMOS -->
 
         <!-- NOSOTROS -->
-        <div id="CEO">
-            <h1 class="titulo150">We value the quality of our relationships as much as the quality of our code.
-            </h1>
+    <div class="our-team">
+        <div class="top">
+            <h2>Our Team</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, numquam.</p>
+        </div>
 
-            <div class="row">
-                <div class="col">
-                    <div class="texto">
-                        <h2 id="pp">
-                            “Rootstrap's services are high-quality and their engineers have become a major part of the
-                            coding and development team. Professional and dedicated. They work directly with the
-                            client's team and communicate constantly.”
-                        </h2>
-                        <img src="" alt="">
-                        <p class="pp"> <img src="./img/Foto cv.png" id="imagenCEO" alt="">
-                            Mandar Bapaye
-                            VP of Engineering at MasterClass
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="texto">
-                        <h2 id="pp">
-                            “Their team is uniquely willing to go above and beyond to mentor a first-time founder. The
-                            team's support is unwavering, and they are all committed to finding new ways to make the
-                            project as successful as possible.”
-                        </h2>
-                        <img src="" alt="">
-                        <p class="pp"><img src="./img/Foto cv.png" id="imagenCEO" alt="">
-                            Lindsey Brassington
-                            CEO and Founder at Generis
-                        </p>
+        <div class="nosotros-stn">
+            <div class="carta" id="tiago">
+                <div class="flex-container">
+                    <img src="./img/Foto cv.png" alt="">
+                    <div class="card__wrapper">
+                        <h2>Tiago Kuszek</h2>
+                        <p>Fundador</p>
+                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, a!</p>
+                        <div class="social-medi4">
+                            <div class="icon">
+                                <a href="#"><i class="fa-brands fa-linkedin"></i></a>  
+                            </div>
+                            <div class="icon">
+                                <a href="#"><i class="fa-brands fa-linkedin"></i></a>  
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
 
+            <div class="carta" id="mateo">
+                <div class="flex-container">
+                    <img src="./img/foto cv mateo.png" alt="">
+                    <div class="card__wrapper">
+                        <h2>Mateo Salguero</h2>
+                        <p>Fundador</p>
+                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, a!</p>
+                        <div class="social-medi4">
+                            <div class="icon">
+                                <a href="#"><i class="fa-brands fa-linkedin"></i></a>  
+                            </div>
+                            <div class="icon">
+                                <a href="#"><i class="fa-brands fa-linkedin"></i></a>  
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
         <!-- NOSOTROS -->
 
         <!-- SERVICIOS -->
@@ -161,18 +170,6 @@
 
                 <div class="servicios1">
                     <i class="fa-solid fa-chart-pie" style="color: #ff8800;"></i>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
-                </div>
-
-                <div class="servicios1">
-                    <i class="fa-solid fa-network-wired" style="color: #ff8800;"></i>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
-                </div>
-
-                <div class="servicios1">
-                    <i class="fa-solid fa-code" style="color: #ff8800;"></i>
                     <h2>Web Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
                 </div>
@@ -224,37 +221,48 @@
 
 
         <!-- FOOTER-->
-        <footer>
-            <div class="columna">
-                <h2>Países</h2>
-                <ul>
-                    <li>ARGENTINA</li>
-                    <li>BRASIL</li>
-                    <li>MONGOLIA</li>
-                </ul>
+    <footer class="footer">
+        <div class="footer-1">
+            <div class="footer-2">
+                <div class="footer-col">
+                    <h4>Compañia</h4>
+                    <ul>
+                        <li><a href="#">Quienes somos</a></li>
+                        <li><a href="#">Trabajo</a></li>
+                        <li><a href="#">Servicios</a></li>
+                        <li><a href="#">Contacto</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Tiago Kuszek</h4>
+                    <ul>
+                        <li><a href="#">Linkedin</a></li>
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Github</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Mateo Salguero</h4>
+                    <ul>
+                        <li><a href="#">Linkedin</a></li>
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Github</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Redes sociales</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    </div>
+                </div>
             </div>
-            <div class="columna">
-                <h2>Contacto</h2>
-                <p><a href="mailto:dezert@gmail.com.com">contacto@tudominio.com</a></p>
-            </div>
-            <div class="columna">
-                <h2>Sitemap</h2>
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Acerca de nosotros</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Contacto</a></li>
-                </ul>
-            </div>
-        </footer>
-        <div class="redes-sociales">
-            <p>Siguenos:</p>
-            <ul>
-                <li><a href="#"><i class="fa-solid fa-laptop-code" style="color: #ff8800;"></i></li>
-                <li><a href="#"><i class="fa-solid fa-laptop-code" style="color: #ff8800;"></i></li>
-                <li><a href="#"><i class="fa-solid fa-laptop-code" style="color: #ff8800;"></i></li>
-            </ul>
         </div>
+    </footer>
         <!-- FOOTER-->
 
 
