--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         <!-- NOSOTROS -->
     <div class="our-team">
         <div class="top">
-            <h2>Our Team</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, numquam.</p>
+            <h2 class="ourteam">Our Team</h2>
+            <p class="ourteam">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, numquam.</p>
         </div>
 
         <div class="nosotros-stn">
@@ -114,9 +114,9 @@
                 <div class="flex-container">
                     <img src="./img/Foto cv.png" alt="">
                     <div class="card__wrapper">
-                        <h2>Tiago Kuszek</h2>
-                        <p>Fundador</p>
-                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, a!</p>
+                        <h2 class="ourteam">Tiago Kuszek</h2>
+                        <p class="ourteam">Fundador</p>
+                        <p class="text" id="ourteam-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, a!</p>
                         <div class="social-medi4">
                             <div class="icon">
                                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>  
@@ -133,9 +133,9 @@
                 <div class="flex-container">
                     <img src="./img/foto cv mateo.png" alt="">
                     <div class="card__wrapper">
-                        <h2>Mateo Salguero</h2>
-                        <p>Fundador</p>
-                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, a!</p>
+                        <h2 class="ourteam">Mateo Salguero</h2>
+                        <p class="ourteam">Fundador</p>
+                        <p class="text" id="ourteam-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, a!</p>
                         <div class="social-medi4">
                             <div class="icon">
                                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>  
