--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="logo-oficina">
-                <img class="img" src="img/oficina.jpg" id="imagen-nav" alt="Chania" >
+                <img class="img" src="img/oficina.jpg" id="imagen-nav" alt="Chania">
             </div>
         </div>
 
@@ -78,26 +78,25 @@
 
         <!-- QUE HACEMOS -->
         <div id="quehacemos">
-            <h1 class="titulo150">We combine design, strategy, and technology to build custom software that
-                <span>amplifies your company impact.</span>
-            </h1>
-            <div id="quehacemos1">
-                <h2> Design
-                    <p>Deliver elegant, intuitive user experiences via research-based, user-centric design.
-                    <p>
-                </h2>
-
-                <h2> Development
-                    <p>Build reliable, scalable software using cutting-edge technology and world-class technical talent.
-                    </p>
-                </h2>
-
-                <h2> Product Strategy
-                    <p>Identify and bolster unique product differentiators to translate vision to value.</p>
-                </h2>
+            <div>
+                <h1 class="titulo150">We combine design, strategy, and technology to build custom software that
+                    <span>amplifies your company impact.</span>
+                </h1>
             </div>
-            <div id="btn-id">
-                <button id="btn-qhm">Explore our services</button>
+
+            <div class="row">
+                <div class="qh">
+                    <h2>DEVELOPMENT</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                </div>
+                <div class="qh">
+                    <h2>DEVELOPMENT</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                </div>
+                <div class="qh">
+                    <h2>DEVELOPMENT</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                </div>
             </div>
         </div>
         <!-- QUE HACEMOS -->
@@ -171,20 +170,14 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
                 </div>
 
-                <div class="servicios1">
-                    <i class="fa-solid fa-code" style="color: #ff8800;"></i>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
-                </div>
             </div>
         </div>
 
         <!-- SERVICIOS -->
 
-
         <!-- NUESTRO TRABAJO -->
-
-        <section class="trabajos" id="nuestrotrabajo">
+        <div>
+            <section class="trabajos" id="nuestrotrabajo">
             <h2 class="nuestrost">Nuestro trabajo</h2>
             <div class="contenedor">
                 <article class="trabajo__columna">
@@ -215,6 +208,8 @@
                 <button id="btn-qhm">Explore our work</button>
             </div>
         </section>
+        </div>
+        
 
         <!-- NUESTRO TRABAJO -->
 
