--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
         <!-- QUE HACEMOS -->
         <div id="quehacemos">
             <div>
-                <h1 class="titulo150">We combine design, strategy, and technology to build custom software that
-                    <span>amplifies your company impact.</span>
+                <h1 class="titulo150">Nuestros valores como empresa</span>
                 </h1>
             </div>
 
@@ -169,12 +168,6 @@
 
                 <div class="servicios1">
                     <i class="fa-solid fa-chart-pie" style="color: #ff8800;"></i>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
-                </div>
-
-                <div class="servicios1">
-                    <i class="fa-solid fa-network-wired" style="color: #ff8800;"></i>
                     <h2>Web Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
                 </div>
