--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
 
             <div class="row">
                 <div class="qh">
-                    <h2>DEVELOPMENT</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                    <h2>Transparencia</h2>
+                    <p>Somos Transparentes</p>
                 </div>
                 <div class="qh">
-                    <h2>DEVELOPMENT</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                    <h2>Responsabilidad</h2>
+                    <p>Somos responsables</p>
                 </div>
                 <div class="qh">
-                    <h2>DEVELOPMENT</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                    <h2>Compromiso</h2>
+                    <p>Tenemos compromiso</p>
                 </div>
             </div>
         </div>
@@ -103,7 +103,7 @@
         <!-- NOSOTROS -->
     <div class="our-team">
         <div class="top">
-            <h2 class="ourteam">Our Team</h2>
+            <h2 class="ourteam">Nuestro equipo</h2>
             <p class="ourteam">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, numquam.</p>
         </div>
 
@@ -152,24 +152,24 @@
         <!-- SERVICIOS -->
 
         <div class="servicios">
-            <h2>Our services</h2>
+            <h2>Nuestros servicios</h2>
             <div class="row">
                 <div class="servicios1">
                     <i class="fa-solid fa-laptop-code" style="color: #ff8800;"></i>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                    <h2>Desarrollo web</h2>
+                    <p>Desarrollo de software, modernización, mejora y mucho más.</p>
                 </div>
 
                 <div class="servicios1">
                     <i class="fa-solid fa-chart-line" style="color: #ff8800;"></i>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                    <h2>Diseño web</h2>
+                    <p>Una interfaz de usuario y una experiencia de usuario potentes e intuitivas fomentan la adopción, el compromiso y la fidelidad.</p>
                 </div>
 
                 <div class="servicios1">
                     <i class="fa-solid fa-chart-pie" style="color: #ff8800;"></i>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum.</p>
+                    <h2>Product strategy</h2>
+                    <p>Defina su visión del producto, elabore una hoja de ruta y conecte con los usuarios.</p>
                 </div>
 
             </div>
