--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <!-- HABLA CON NOSOTROS + FOTO -->
 
         <!-- QUE HACEMOS -->
+
         <div id="quehacemos">
             <div>
                 <h1 class="titulo150">Nuestros valores como empresa</span>
@@ -103,8 +104,10 @@
         <!-- NOSOTROS -->
     <div class="our-team">
         <div class="top">
-            <h2 class="ourteam">Nuestro equipo</h2>
-            <p class="ourteam">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, numquam.</p>
+            <!-- NOSOTROS ESTO HACE QUE BAILE LA PAGINAA EN CELULAAAR
+            <h2 class="ourteam" id="ourteamp">Nuestro equipo</h2>
+            <p class="ourteam" id="ourteamp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, numquam.</p>
+            NOSOTROS -->
         </div>
 
         <div class="nosotros-stn">
