Arreglo footer y baile

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
 
 
         <!-- FOOTER-->
+<div class="footer123">
     <footer class="footer">
         <div class="footer-1">
             <div class="footer-2">
@@ -266,6 +267,7 @@
             </div>
         </div>
     </footer>
+</div>
         <!-- FOOTER-->
 
 
